--- a/Employees.ipynb
+++ b/Employees.ipynb
@@ -193,11 +193,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f36a6896-f054-4f9b-ad4b-ea7392da6cad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "job type  Private             22696\n",
+      " Self-emp-not-inc     2541\n",
+      " Local-gov            2093\n",
+      " ?                    1836\n",
+      " State-gov            1298\n",
+      " Self-emp-inc         1116\n",
+      " Federal-gov           960\n",
+      " Without-pay            14\n",
+      " Never-worked            7\n",
+      "Name: job type, dtype: int64\n",
+      "degree  HS-grad         10501\n",
+      " Some-college     7291\n",
+      " Bachelors        5355\n",
+      " Masters          1723\n",
+      " Assoc-voc        1382\n",
+      " 11th             1175\n",
+      " Assoc-acdm       1067\n",
+      " 10th              933\n",
+      " 7th-8th           646\n",
+      " Prof-school       576\n",
+      " 9th               514\n",
+      " 12th              433\n",
+      " Doctorate         413\n",
+      " 5th-6th           333\n",
+      " 1st-4th           168\n",
+      " Preschool          51\n",
+      "Name: degree, dtype: int64\n",
+      "yrs employed 9     10501\n",
+      "10     7291\n",
+      "13     5355\n",
+      "14     1723\n",
+      "11     1382\n",
+      "7      1175\n",
+      "12     1067\n",
+      "6       933\n",
+      "4       646\n",
+      "15      576\n",
+      "5       514\n",
+      "8       433\n",
+      "16      413\n",
+      "3       333\n",
+      "2       168\n",
+      "1        51\n",
+      "Name: yrs employed, dtype: int64\n",
+      "married status  Married-civ-spouse       14976\n",
+      " Never-married            10683\n",
+      " Divorced                  4443\n",
+      " Separated                 1025\n",
+      " Widowed                    993\n",
+      " Married-spouse-absent      418\n",
+      " Married-AF-spouse           23\n",
+      "Name: married status, dtype: int64\n",
+      "spouse job  Prof-specialty       4140\n",
+      " Craft-repair         4099\n",
+      " Exec-managerial      4066\n",
+      " Adm-clerical         3770\n",
+      " Sales                3650\n",
+      " Other-service        3295\n",
+      " Machine-op-inspct    2002\n",
+      " ?                    1843\n",
+      " Transport-moving     1597\n",
+      " Handlers-cleaners    1370\n",
+      " Farming-fishing       994\n",
+      " Tech-support          928\n",
+      " Protective-serv       649\n",
+      " Priv-house-serv       149\n",
+      " Armed-Forces            9\n",
+      "Name: spouse job, dtype: int64\n",
+      "fam stat  Husband           13193\n",
+      " Not-in-family      8305\n",
+      " Own-child          5068\n",
+      " Unmarried          3446\n",
+      " Wife               1568\n",
+      " Other-relative      981\n",
+      "Name: fam stat, dtype: int64\n",
+      "race  White                 27816\n",
+      " Black                  3124\n",
+      " Asian-Pac-Islander     1039\n",
+      " Amer-Indian-Eskimo      311\n",
+      " Other                   271\n",
+      "Name: race, dtype: int64\n",
+      "gender  Male      21790\n",
+      " Female    10771\n",
+      "Name: gender, dtype: int64\n",
+      "country  United-States                 29170\n",
+      " Mexico                          643\n",
+      " ?                               583\n",
+      " Philippines                     198\n",
+      " Germany                         137\n",
+      " Canada                          121\n",
+      " Puerto-Rico                     114\n",
+      " El-Salvador                     106\n",
+      " India                           100\n",
+      " Cuba                             95\n",
+      " England                          90\n",
+      " Jamaica                          81\n",
+      " South                            80\n",
+      " China                            75\n",
+      " Italy                            73\n",
+      " Dominican-Republic               70\n",
+      " Vietnam                          67\n",
+      " Guatemala                        64\n",
+      " Japan                            62\n",
+      " Poland                           60\n",
+      " Columbia                         59\n",
+      " Taiwan                           51\n",
+      " Haiti                            44\n",
+      " Iran                             43\n",
+      " Portugal                         37\n",
+      " Nicaragua                        34\n",
+      " Peru                             31\n",
+      " France                           29\n",
+      " Greece                           29\n",
+      " Ecuador                          28\n",
+      " Ireland                          24\n",
+      " Hong                             20\n",
+      " Cambodia                         19\n",
+      " Trinadad&Tobago                  19\n",
+      " Laos                             18\n",
+      " Thailand                         18\n",
+      " Yugoslavia                       16\n",
+      " Outlying-US(Guam-USVI-etc)       14\n",
+      " Honduras                         13\n",
+      " Hungary                          13\n",
+      " Scotland                         12\n",
+      " Holand-Netherlands                1\n",
+      "Name: country, dtype: int64\n",
+      "sal range  <=50K    24720\n",
+      " >50K      7841\n",
+      "Name: sal range, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df.columns:\n",
+    "    if df[col].nunique() < 45:\n",
+    "        print(col, df[col].value_counts() )"
+   ]
   },
   {
    "cell_type": "code",
